feat: add HTTP client for resolving Node Registry entries