@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-package gr.uoa.di.madgik.node.endpoint.client;
+package gr.uoa.di.madgik.node.registry.client;
 
 import gr.uoa.di.madgik.node.capabilities.model.Capability;
 import gr.uoa.di.madgik.node.capabilities.model.NodeCapabilities;
@@ -30,119 +30,154 @@ import java.net.http.HttpClient;
 import java.net.http.HttpHeaders;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.ByteBuffer;
 import java.time.Duration;
+import java.util.ArrayDeque;
 import java.util.List;
 import java.util.Optional;
+import java.util.Queue;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
+import java.util.concurrent.Flow;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLParameters;
 import javax.net.ssl.SSLSession;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-class HttpNodeCapabilitiesClientTest {
+class HttpNodeRegistryClientTest {
 
-    private static final URI ENDPOINT_URI = URI.create("https://node.eosc-beyond.eu/api/endpoint");
+    private static final URI REGISTRY_URI = URI.create("https://registry.example.org/nodes");
+    private static final URI NODE_ENDPOINT = URI.create("https://node.example.org/api/endpoint");
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Test
-    void getFetchesEndpointCapabilities() throws IOException {
-        CapturingHttpClient httpClient = new CapturingHttpClient(200, objectMapper.writeValueAsString(endpointCapabilities()));
+    void fetchNodesLoadsRegistryNodesAndEnrichesCapabilities() throws IOException {
+        CapturingHttpClient httpClient = new CapturingHttpClient(
+                new QueuedResponse(200, objectMapper.writeValueAsString(registryNodes())),
+                new QueuedResponse(200, objectMapper.writeValueAsString(endpointCapabilities())));
 
-        NodeCapabilities result = HttpNodeCapabilitiesClient.builder(ENDPOINT_URI)
+        List<Node> result = HttpNodeRegistryClient.builder(REGISTRY_URI, "test-key")
                 .httpClient(httpClient)
+                .objectMapper(objectMapper)
                 .build()
-                .get();
+                .fetchNodes();
 
-        assertEquals("GET", httpClient.request.method());
-        assertEquals(ENDPOINT_URI, httpClient.request.uri());
-        assertEquals("application/json, application/*+json, application/octet-stream, text/plain, text/json",
-                httpClient.request.headers().firstValue("Accept").orElseThrow());
-        assertEquals(URI.create("https://node.eosc-beyond.eu"), result.getNodeEndpoint());
-        assertEquals("metadata", result.getCapabilities().getFirst().getCapabilityType());
+        assertEquals(2, httpClient.requests.size());
+        assertEquals(REGISTRY_URI, httpClient.requests.get(0).uri());
+        assertEquals("test-key", httpClient.requests.get(0).headers().firstValue("x-api-key").orElseThrow());
+        assertEquals(NODE_ENDPOINT, httpClient.requests.get(1).uri());
+        assertEquals("Test Node", result.getFirst().getName());
+        assertEquals("metadata", result.getFirst().getCapabilities().getFirst().getCapabilityType());
     }
 
     @Test
-    void updateSendsPayloadAndBearerToken() throws IOException {
-        CapturingHttpClient httpClient = new CapturingHttpClient(200, objectMapper.writeValueAsString(endpointCapabilities()));
+    void capabilityFailuresProduceEmptyCapabilityList() throws IOException {
+        CapturingHttpClient httpClient = new CapturingHttpClient(
+                new QueuedResponse(200, objectMapper.writeValueAsString(registryNodes())),
+                new QueuedResponse(500, "endpoint failed"));
 
-        NodeCapabilities result = HttpNodeCapabilitiesClient.builder(endpointUri())
+        List<Node> result = HttpNodeRegistryClient.builder(REGISTRY_URI, "test-key")
                 .httpClient(httpClient)
+                .objectMapper(objectMapper)
                 .build()
-                .update(endpointCapabilities(), "test-token");
+                .fetchNodes();
 
-        assertEquals("PUT", httpClient.request.method());
-        assertEquals("Bearer test-token", httpClient.request.headers().firstValue("Authorization").orElseThrow());
-        assertEquals("application/json", httpClient.request.headers().firstValue("Content-Type").orElseThrow());
-        assertEquals("metadata", result.getCapabilities().getFirst().getCapabilityType());
+        assertTrue(result.getFirst().getCapabilities().isEmpty());
     }
 
     @Test
-    void updateRequiresBearerToken() {
-        CapturingHttpClient httpClient = new CapturingHttpClient(200, "{}");
+    void invalidNodeEndpointProducesEmptyCapabilityList() throws IOException {
+        CapturingHttpClient httpClient = new CapturingHttpClient(
+                new QueuedResponse(200, objectMapper.writeValueAsString(registryNodesWithEndpoint(
+                        URI.create("ftp://node.example.org/api/endpoint")))));
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> HttpNodeCapabilitiesClient.builder(endpointUri())
+        List<Node> result = HttpNodeRegistryClient.builder(REGISTRY_URI, "test-key")
+                .httpClient(httpClient)
+                .objectMapper(objectMapper)
+                .build()
+                .fetchNodes();
+
+        assertEquals(1, httpClient.requests.size());
+        assertTrue(result.getFirst().getCapabilities().isEmpty());
+    }
+
+    @Test
+    void registryFailureRaisesClientException() {
+        CapturingHttpClient httpClient = new CapturingHttpClient(new QueuedResponse(403, "forbidden"));
+
+        NodeRegistryClientException exception = assertThrows(
+                NodeRegistryClientException.class,
+                () -> HttpNodeRegistryClient.builder(REGISTRY_URI, "test-key")
                         .httpClient(httpClient)
                         .build()
-                        .update(endpointCapabilities(), " "));
-
-        assertEquals("accessToken must not be blank for update requests", exception.getMessage());
-        assertNull(httpClient.request);
-    }
-
-    @Test
-    void nonSuccessResponseRaisesClientException() throws IOException {
-        CapturingHttpClient httpClient = new CapturingHttpClient(403, "forbidden");
-
-        NodeClientException exception = assertThrows(
-                NodeClientException.class,
-                () -> HttpNodeCapabilitiesClient.builder(ENDPOINT_URI)
-                        .httpClient(httpClient)
-                        .build()
-                        .get());
+                        .fetchNodes());
 
         assertEquals(403, exception.getStatusCode());
         assertEquals("forbidden", exception.getResponseBody());
     }
 
-    private URI endpointUri() {
-        return ENDPOINT_URI;
+    @Test
+    void builderRequiresApiKey() {
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> HttpNodeRegistryClient.builder(REGISTRY_URI, " "));
+
+        assertEquals("apiKey must not be blank", exception.getMessage());
+    }
+
+    private List<Node> registryNodes() {
+        return registryNodesWithEndpoint(NODE_ENDPOINT);
+    }
+
+    private List<Node> registryNodesWithEndpoint(URI nodeEndpoint) {
+        LegalEntity legalEntity = new LegalEntity();
+        legalEntity.setName("Legal Entity");
+        legalEntity.setRorId("https://ror.org/test");
+
+        Node node = new Node();
+        node.setId("node-id");
+        node.setName("Test Node");
+        node.setLogo(URI.create("https://node.example.org/logo.png"));
+        node.setPid("node-pid");
+        node.setLegalEntity(legalEntity);
+        node.setNodeEndpoint(nodeEndpoint);
+        return List.of(node);
     }
 
     private NodeCapabilities endpointCapabilities() {
         Capability capability = new Capability();
         capability.setCapabilityType("metadata");
-        capability.setEndpoint("https://node.eosc-beyond.eu/api/metadata");
+        capability.setEndpoint("https://node.example.org/api/metadata");
 
         NodeCapabilities capabilities = new NodeCapabilities();
-        capabilities.setNodeEndpoint(URI.create("https://node.eosc-beyond.eu"));
+        capabilities.setNodeEndpoint(URI.create("https://node.example.org"));
         capabilities.setCapabilities(List.of(capability));
         return capabilities;
     }
 
+    private record QueuedResponse(int statusCode, String body) {
+    }
+
     private static class CapturingHttpClient extends HttpClient {
 
-        private final int statusCode;
-        private final String responseBody;
-        private HttpRequest request;
+        private final Queue<QueuedResponse> responses;
+        private final List<HttpRequest> requests = new java.util.ArrayList<>();
 
-        private CapturingHttpClient(int statusCode, String responseBody) {
-            this.statusCode = statusCode;
-            this.responseBody = responseBody;
+        private CapturingHttpClient(QueuedResponse... responses) {
+            this.responses = new ArrayDeque<>(List.of(responses));
         }
 
         @Override
         public <T> HttpResponse<T> send(HttpRequest request, HttpResponse.BodyHandler<T> responseBodyHandler) {
-            this.request = request;
+            requests.add(request);
+            QueuedResponse response = responses.remove();
             @SuppressWarnings("unchecked")
-            T body = (T) responseBody;
-            return new SimpleHttpResponse<>(request, statusCode, body);
+            T body = (T) response.body();
+            return new SimpleHttpResponse<>(request, response.statusCode(), body);
         }
 
         @Override
